--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Four Tasks</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/assets/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/assets/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/assets/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./src/assets/favicon_io/site.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
